--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,10 @@
     <title>Let's Coder Contacto</title>
     <link href="./styles/mystyles.css" rel="stylesheet" />
     <link rel="icon" href="./images/letscoder-icon-favicon.png" type="image/png" />
+
+    <!-- Font Awesome Kit -->
+    <script src="https://kit.fontawesome.com/5ae13542d1.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -18,27 +22,27 @@
 
         <div class="navegacion">
             <nav>
-                <button class="navegacion__button zoom" onclick="location.href='index.html'">Home</button>
-                <button class="navegacion__button zoom" onclick="location.href='conocenos.html'">Conócenos</button>
-                <button class="navegacion__button zoom" onclick="location.href='info.html'">Información</button>
-                <button class="navegacion__button zoom" onclick="location.href='contacto.html'">Contacto</button>
+                <button class="font-30 zoom" onclick="location.href='index.html'">Home</button>
+                <button class="font-30 zoom" onclick="location.href='conocenos.html'">Conócenos</button>
+                <button class="font-30 zoom" onclick="location.href='info.html'">Información</button>
+                <button class="font-30 zoom" onclick="location.href='contacto.html'">Contacto</button>
 
             </nav>
         </div>
     </header>
 
     <main class="width_main">
-        <div class="contacto zoom shadow">
+        <div class="contacto font-verd shadow">
             <div class="contacto__encabezado linea__puntos">
                 <h4>Para cualquier duda o información sobre los cursos, <br /> contáctanos!</h4>
             </div>
 
             <div class="contacto__tlf linea__puntos">
-                <p><strong>Tlf: </strong>+34 931 227 721</p>
+                <p class="font-30"><i class=" size--icon fas fa-phone-square-alt"></i> +34 931 227 721</p>
             </div>
 
             <div class="contacto__tlf">
-                <p><strong>mail: </strong>hola@letscoder.com</p>
+                <p class="font-30"><i class="size--icon fas fa-envelope"></i> hola@letscoder.com</p>
             </div>
         </div>
     </main>
