--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Let's Coder Home</title>
+    <title>Let's Coder Formulario</title>
     <link href="./styles/mystyles.css" rel="stylesheet" />
     <link rel="icon" href="./images/letscoder-icon-favicon.png" type="image/png" />
 </head>
@@ -18,10 +18,10 @@
 
         <div class="navegacion">
             <nav>
-                <button class="navegacion__button zoom" onclick="location.href='index.html'">Home</button>
-                <button class="navegacion__button zoom" onclick="location.href='conocenos.html'">Conócenos</button>
-                <button class="navegacion__button zoom" onclick="location.href='info.html'">Información</button>
-                <button class="navegacion__button zoom" onclick="location.href='contacto.html'">Contacto</button>
+                <button class="font-30 zoom" onclick="location.href='index.html'">Home</button>
+                <button class="font-30 zoom" onclick="location.href='conocenos.html'">Conócenos</button>
+                <button class="font-30 zoom" onclick="location.href='info.html'">Información</button>
+                <button class="font-30 zoom" onclick="location.href='contacto.html'">Contacto</button>
             </nav>
 
 
@@ -31,9 +31,9 @@
     <main class="width_main">
 
         <form class="form__flex">
-            <section class="section__personal zoom shadow">
+            <section class="section__personal shadow">
 
-                <div class="personal__title linea__puntos">
+                <div class="personal__title font-30 linea__puntos">
                     <h3>Información personal</h3>
                 </div>
 
@@ -82,12 +82,12 @@
 
             </section>
 
-            <section class="curso zoom shadow">
-                <div class="curso--title linea__puntos">
+            <section class="curso shadow">
+                <div class="curso--title font-30 linea__puntos">
                     <h3>Información sobre el curso</h3>
                 </div>
 
-                <div class="curso__radio--title">
+                <div class="curso__radio--title negrita">
                     <p>Selecciona que tipo de Bootcamp te interesa</p>
                 </div>
                 <div class="curso__radio linea__puntos">
@@ -166,8 +166,8 @@
                 </div>
             </section>
 
-            <section class="section__coment zoom shadow">
-                <div class="coment--title linea__puntos">
+            <section class="section__coment shadow">
+                <div class="coment--title font-30 linea__puntos">
                     <h3>Comentarios</h3>
                 </div>
 
@@ -178,7 +178,7 @@
             </section>
 
             <div class="button">
-                <input class="enviar__button zoom" type="submit" value="Enviar" />
+                <input class="enviar__button font-30 zoom" type="submit" value="Enviar" />
             </div>
         </form>
 
