--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         <div class="navegacion">
             <nav>
-                <button class="navegacion__button zoom" onclick="location.href='index.html'">Home</button>
-                <button class="navegacion__button zoom" onclick="location.href='conocenos.html'">Conócenos</button>
-                <button class="navegacion__button zoom" onclick="location.href='info.html'">Información</button>
-                <button class="navegacion__button zoom" onclick="location.href='contacto.html'">Contacto</button>
+                <button class="font-30 zoom" onclick="location.href='index.html'">Home</button>
+                <button class="font-30 zoom" onclick="location.href='conocenos.html'">Conócenos</button>
+                <button class="font-30 zoom" onclick="location.href='info.html'">Información</button>
+                <button class="font-30 zoom" onclick="location.href='contacto.html'">Contacto</button>
             </nav>
 
 
@@ -29,7 +29,7 @@
     </header>
 
     <main class="width_main">
-        <div class="home__encabezado">
+        <div class="home__encabezado font-verd">
             <h2>Próximas fechas</h2>
         </div>
 
@@ -41,13 +41,13 @@
 
                 <div class="linea__puntos"></div>
 
-                <div class="tarjeta__dia">
+                <div class="tarjeta__dia font-verd">
                     <p>Lun <span class="punto">&nbsp;•&nbsp;</span> Ene</p>
                 </div>
 
                 <div class="linea__puntos"></div>
 
-                <div class="tarjeta__curso">
+                <div class="tarjeta__curso font-30 font-verd">
                     <p>
                         <span class="negrita">Curso Full-Time</span> <br /> Online
                     </p>
@@ -56,7 +56,7 @@
                 <div class="linea__puntos"></div>
 
                 <div class="tarjeta__button">
-                    <button class="zoom" onclick="location.href='form.html'">Inscribirme</button>
+                    <button class="font-30 zoom" onclick="location.href='form.html'">Inscribirme</button>
                 </div>
             </div>
 
@@ -67,13 +67,13 @@
 
                 <div class="linea__puntos"></div>
 
-                <div class="tarjeta__dia">
+                <div class="tarjeta__dia font-verd">
                     <p>Jue <span class="punto">&nbsp;•&nbsp;</span> Ene</p>
                 </div>
 
                 <div class="linea__puntos"></div>
 
-                <div class="tarjeta__curso">
+                <div class="tarjeta__curso font-30 font-verd">
                     <p>
                         <span class="negrita">Curso Part-Time</span> <br /> Online
                     </p>
@@ -82,7 +82,7 @@
                 <div class="linea__puntos"></div>
 
                 <div class="tarjeta__button">
-                    <button class="zoom" onclick="location.href='form.html'">Inscribirme</button>
+                    <button class="font-30 zoom" onclick="location.href='form.html'">Inscribirme</button>
                 </div>
             </div>
 
@@ -93,13 +93,13 @@
 
                 <div class="linea__puntos"></div>
 
-                <div class="tarjeta__dia">
+                <div class="tarjeta__dia font-verd">
                     <p>Lun <span class="punto">&nbsp;•&nbsp;</span> Mar</p>
                 </div>
 
                 <div class="linea__puntos"></div>
 
-                <div class="tarjeta__curso">
+                <div class="tarjeta__curso font-30 font-verd">
                     <p>
                         <span class="negrita">Curso Full Time</span> <br /> Planeta Marte
                     </p>
@@ -108,11 +108,12 @@
                 <div class="linea__puntos"></div>
 
                 <div class="tarjeta__button">
-                    <button class="zoom" onclick="location.href='form.html'">Inscribirme</button>
+                    <button class="font-30 zoom" onclick="location.href='form.html'">Inscribirme</button>
                 </div>
             </div>
         </div>
     </main>
+
 </body>
 
 </html>
