--- a/info.html
+++ b/info.html
@@ -18,16 +18,16 @@
 
         <div class="navegacion">
             <nav>
-                <button class="navegacion__button zoom" onclick="location.href='index.html'">Home</button>
-                <button class="navegacion__button zoom" onclick="location.href='conocenos.html'">Conócenos</button>
-                <button class="navegacion__button zoom" onclick="location.href='info.html'">Información</button>
-                <button class="navegacion__button zoom" onclick="location.href='contacto.html'">Contacto</button>
+                <button class="font-30 zoom" onclick="location.href='index.html'">Home</button>
+                <button class="font-30 zoom" onclick="location.href='conocenos.html'">Conócenos</button>
+                <button class="font-30 zoom" onclick="location.href='info.html'">Información</button>
+                <button class="font-30 zoom" onclick="location.href='contacto.html'">Contacto</button>
             </nav>
         </div>
     </header>
 
     <main class="width_main">
-        <div class="info">
+        <div class="info font-verd">
             <h2 class="info__encabezado">Información</h2>
             <p class="info__presentacion">
                 El Bootcamp no sería posible sin alumnos, así que son las verdaderas estrellas. <br/> Aquí están los mejores entre los mejores:
@@ -35,7 +35,7 @@
         </div>
 
         <div class="tabla__flex">
-            <table class="zoom shadow">
+            <table class="font-verd shadow">
                 <thead>
                     <tr>
                         <th>Nombre</th>
@@ -101,94 +101,141 @@
         </div>
 
         <div class="info">
-            <h3 class="info__encabezado--listas">
+            <h3 class="info__encabezado--listas font-verd">
                 Algunas cosas que hemos aprendido:
             </h3>
         </div>
 
         <div class="flex__list">
 
-            <div class="list zoom shadow">
+            <div class="list shadow">
                 <div class="list__title">
 
-                    <h3>HTML</h3>
+                    <h3 class="font-30">HTML</h3>
 
                 </div>
 
                 <div class="linea__puntos"></div>
 
                 <div class="list__subtitle">
-                    <ul class="sublist">
+                    <ul class=" font-verd sublist">
                         <li>
                             <h4>Tags</h4>
                         </li>
-                        <ul class="sublist">
-                            <li><span class="negrita">&lt;body&gt;</span><br/> Lo que usuario puede ver.</li><br/>
-                            <li><span class="negrita">&lt;head&gt;</span><br/> Encabezado de la página.</li><br/>
-                            <li><span class="negrita">&lt;div&gt;</span><br/> Una división dentro de la pagina.</li><br/>
-                            <li><span class="negrita">&lt;p&gt;</span><br/> Párrafo.</li><br/>
-                            <li><span class="negrita">&lt;img&gt;</span><br/> Imagen.</li><br/>
-                            <li><span class="negrita">&lt;button&gt;</span><br/> Botón.</li><br/>
-                            <li><span class="negrita">&lt;br/&gt;</span> Salto de linea.</li>
-                        </ul>
+                        <li class="list_style">
+                            <ul class="font-verd sublist">
+                                <li>
+                                    <p><span class="negrita">&lt;body&gt;</span></p>
+
+                                    <p>Lo que usuario puede ver.</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">&lt;head&gt;</span></p>
+                                    <p>Encabezado de la página.</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">&lt;div&gt;</span></p>
+                                    <p>Una división dentro de la pagina.</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">&lt;p&gt;</span></p>
+                                    <p>Párrafo.</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">&lt;img&gt;</span></p>
+                                    <p>Imagen.</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">&lt;button&gt;</span></p>
+                                    <p>Botón.</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">&lt;br/&gt;</span></p>
+                                    <p>Salto de linea.</p>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
 
 
 
-            <div class="list zoom shadow">
+            <div class="list shadow">
                 <div class="list__title">
 
-                    <h3>CSS</h3>
+                    <h3 class="font-30">CSS</h3>
 
                 </div>
 
                 <div class="linea__puntos"></div>
 
                 <div class="list__subtitle">
-                    <ul class="sublist">
+                    <ul class="font-verd sublist">
                         <li>
                             <h4>Selectores</h4>
                         </li>
-                        <ul class="sublist">
-                            <li><span class="negrita">*</span><br/> Selecciona los elementos de la pagina.</li><br/>
-                            <li><span class="negrita">.clase</span><br/> Selecciona los elementos que tengan la clase "clase".</li><br/>
-                            <li><span class="negrita">#id</span><br/> Selecciona el elemento con la id "id".</li><br/>
-                            <li><span class="negrita">div .clase</span><br/> Selecciona los elementos con la clase "clase" dentro de cualquier &ltdiv&gt.</li><br/>
-                            <li><span class="negrita">div > p</span><br/> Selecciona todos los elementos &ltp&gt cuyo padre sea un &ltdiv&gt </li><br/>
-                            <li><span class="negrita">.clase1.clase2</span><br/> Selecciona los elementos con las clases "clase1" y "clase2".</li><br/>
-                            <li><span class="negrita">p:last-child</span><br/> Selecciona los elementos &ltp&gt que sean el último hijo.</li>
+                        <li class="list_style">
+                            <ul class="font-verd sublist">
+                                <li>
+                                    <p><span class="negrita">*</span></p>
+                                    <p> Selecciona los elementos de la pagina.</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">.clase</span></p>
+                                    <p> Selecciona los elementos que tengan la clase "clase".</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">#id</span></p>
+                                    <p> Selecciona el elemento con la id "id".</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">div .clase</span></p>
+                                    <p> Selecciona los elementos con la clase "clase" dentro de cualquier &lt;div&gt;.</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">div > p</span></p>
+                                    <p> Selecciona todos los elementos &lt;p&gt; cuyo padre sea un &lt;div&gt; </p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">.clase1.clase2</span></p>
+                                    <p> Selecciona los elementos con las clases "clase1" y "clase2".</p>
+                                </li>
+                                <li>
+                                    <p><span class="negrita">p:last-child</span></p>
+                                    <p> Selecciona los elementos &lt;p&gt; que sean el último hijo.</p>
+                                </li>
 
-                        </ul>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
 
             </div>
         </div>
 
-        <div class="info">
+        <div class="info font-verd">
             <h3 class="info__encabezado--listas">
                 Nuestro día a día:
             </h3>
         </div>
 
         <div class="flex__list--daily">
-            <div class="daily zoom shadow">
-                <dl>
-                    <dt>09:00-09:20 / Daly Meeting</dt>
-                    <dd class="sublist">Ponemos en comun con el mentor lo que hicimos el día anterior y lo que queremos hacer el día de hoy.</dd><br/>
-                    <dt>09:20-10:00 / Timework</dt>
-                    <dd class="sublist">Trabajamos en el proyecto.</dd><br/>
-                    <dt>10:00-11:00 / Workshop</dt>
-                    <dd class="sublist">El mentor nos da una clase teórica.</dd><br/>
-                    <dt>11:00-11:30 / Brake</dt>
-                    <dd class="sublist">Paramos 30m para almorzar y estirar las piernas.</dd><br/>
-                    <dt>11:30-14:00 / Timework Again</dt>
-                    <dd class="sublist">Trabajamos de nuevo en el proyecto.</dd><br/>
-                    <dt>14:00-15:00 / Launch Brake</dt>
-                    <dd class="sublist">Paramos 1h para comer.</dd><br/>
-                    <dt>15:00-17:30 / Timework Once Again</dt>
+            <div class="daily shadow">
+                <dl class="font-verd">
+                    <dt class="negrita">09:00-09:20 / Daly Meeting</dt>
+                    <dd class="sublist">Ponemos en comun con el mentor lo que hicimos el día anterior y lo que queremos hacer el día de hoy.</dd>
+                    <dt class="negrita">09:20-10:00 / Timework</dt>
+                    <dd class="sublist">Trabajamos en el proyecto.</dd>
+                    <dt class="negrita">10:00-11:00 / Workshop</dt>
+                    <dd class="sublist">El mentor nos da una clase teórica.</dd>
+                    <dt class="negrita">11:00-11:30 / Brake</dt>
+                    <dd class="sublist">Paramos 30m para almorzar y estirar las piernas.</dd>
+                    <dt class="negrita">11:30-14:00 / Timework Again</dt>
+                    <dd class="sublist">Trabajamos de nuevo en el proyecto.</dd>
+                    <dt class="negrita">14:00-15:00 / Launch Brake</dt>
+                    <dd class="sublist">Paramos 1h para comer.</dd>
+                    <dt class="negrita">15:00-17:30 / Timework Once Again</dt>
                     <dd class="sublist">Continuamos trabajando en el proyecto hasta la hora de irnos.</dd>
                 </dl>
             </div>
