--- a/conocenos.html
+++ b/conocenos.html
@@ -18,18 +18,18 @@
 
         <div class="navegacion">
             <nav>
-                <button class="navegacion__button zoom" onclick="location.href='index.html'">Home</button>
-                <button class="navegacion__button zoom" onclick="location.href='conocenos.html'">Conócenos</button>
-                <button class="navegacion__button zoom" onclick="location.href='info.html'">Información</button>
-                <button class="navegacion__button zoom" onclick="location.href='contacto.html'">Contacto</button>
+                <button class="font-30 zoom" onclick="location.href='index.html'">Home</button>
+                <button class="font-30 zoom" onclick="location.href='conocenos.html'">Conócenos</button>
+                <button class="font-30 zoom" onclick="location.href='info.html'">Información</button>
+                <button class="font-30 zoom" onclick="location.href='contacto.html'">Contacto</button>
 
             </nav>
         </div>
     </header>
 
     <main class="width_main">
-        <div class="conocenos">
-            <h2 class="conocenos__encabezado">Conócenos</h2>
+        <div class="conocenos font-verd">
+            <h2>Conócenos</h2>
             <p class="conocenos__presentacion">
                 ¿Quieres aprender las tecnologías y metodologías necesarias para realizar una aplicación web completa? <br /> ¿Quieres aprender los fundamentos de programación necesarios para iniciar tu carrera como programador? <br /> Nada sería posible
                 sin nuestros mentores, y aquí te los presentamos:
@@ -43,7 +43,7 @@
 
             <div class="mentor__texto">
                 <h2 class="mentor__texto--nombre">Lluís García</h2>
-                <p class="mentor__texto--descripcion">
+                <p class="mentor__texto--descripcion font-30">
                     Nacido en un pequeño pueblo en el corazón de Cataluña, dedicándome al deporte hasta que decidí dar un giro a mi carrera profesional y empezar en el mundo de la programación.
                 </p>
             </div>
@@ -57,7 +57,7 @@
 
             <div class="mentor__texto">
                 <h2 class="mentor__texto--nombre">Alberto Dávila</h2>
-                <p class="mentor__texto--descripcion">
+                <p class="mentor__texto--descripcion font-30">
                     Madrileño apasionado por el mundo del fitness, nutrición y la salud.
                     <br /> La mayor parte de mi carrera profesional se basó en el soporte al usuario y el Sysadmin pero la creatividad y el razonamiento lógico del mundo del desarrollo web me atraparon hasta tal punto de dejar mi cómodo trabajo indefinido
                     y empezar de 0 con esto.
@@ -72,7 +72,7 @@
 
             <div class="mentor__texto">
                 <h2 class="mentor__texto--nombre">Fernando Dos Santos</h2>
-                <p class="mentor__texto--descripcion">
+                <p class="mentor__texto--descripcion font-30">
                     De La Plata, Argentina, aunque un poco nómada. Ami background en finanzas le sumé Javascript como herramienta. Actualmente soy desarrollador frontend y colaboro con un proyecto en blockchain.
                 </p>
             </div>
