añadido resalte de boton

--- a/conocenos.html
+++ b/conocenos.html
@@ -19,7 +19,7 @@
         <div class="navegacion">
             <nav>
                 <button class="font-30 zoom" onclick="location.href='index.html'">Home</button>
-                <button class="font-30 zoom" onclick="location.href='conocenos.html'">Conócenos</button>
+                <button class="font-30 zoom boton2" onclick="location.href='conocenos.html'">Conócenos</button>
                 <button class="font-30 zoom" onclick="location.href='info.html'">Información</button>
                 <button class="font-30 zoom" onclick="location.href='contacto.html'">Contacto</button>
 
