errores corregidos-readme acabado

--- a/info.html
+++ b/info.html
@@ -111,7 +111,7 @@
             <div class="list shadow">
                 <div class="list__title">
 
-                    <h3 class="font-30">HTML</h3>
+                    <h3 class="font-30 negrita">HTML</h3>
 
                 </div>
 
@@ -121,8 +121,7 @@
                     <ul class=" font-verd sublist">
                         <li>
                             <h4>Tags</h4>
-                        </li>
-                        <li class="list_style">
+
                             <ul class="font-verd sublist">
                                 <li>
                                     <p><span class="negrita">&lt;body&gt;</span></p>
@@ -164,7 +163,7 @@
             <div class="list shadow">
                 <div class="list__title">
 
-                    <h3 class="font-30">CSS</h3>
+                    <h3 class="font-30 negrita">CSS</h3>
 
                 </div>
 
@@ -174,8 +173,7 @@
                     <ul class="font-verd sublist">
                         <li>
                             <h4>Selectores</h4>
-                        </li>
-                        <li class="list_style">
+
                             <ul class="font-verd sublist">
                                 <li>
                                     <p><span class="negrita">*</span></p>
@@ -223,7 +221,7 @@
         <div class="flex__list--daily">
             <div class="daily shadow">
                 <dl class="font-verd">
-                    <dt class="negrita">09:00-09:20 / Daly Meeting</dt>
+                    <dt class="negrita">09:00-09:20 / Daily Meeting</dt>
                     <dd class="sublist">Ponemos en comun con el mentor lo que hicimos el día anterior y lo que queremos hacer el día de hoy.</dd>
                     <dt class="negrita">09:20-10:00 / Timework</dt>
                     <dd class="sublist">Trabajamos en el proyecto.</dd>
