--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="tarjetas__box">
             <div class="tarjeta shadow zoom">
-                <div class="tarjeta__fecha">
+                <div class="tarjeta__fecha negrita">
                     <p>25</p>
                 </div>
 
@@ -61,7 +61,7 @@
             </div>
 
             <div class="tarjeta shadow zoom">
-                <div class="tarjeta__fecha">
+                <div class="tarjeta__fecha negrita">
                     <p>28</p>
                 </div>
 
@@ -87,7 +87,7 @@
             </div>
 
             <div class="tarjeta shadow zoom">
-                <div class="tarjeta__fecha">
+                <div class="tarjeta__fecha negrita">
                     <p>3</p>
                 </div>
 
